# hermes

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  config.json  docker-compose.yml  explanation.txt  hermess_article.md  introduction.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.superpowers/brainstorm/90793-1779528951/content/: design-overview.html  problems.html  waiting.html
.superpowers/brainstorm/90793-1779528951/state/: server-stopped
config/: deepseek.toml.example  default.toml.example  feishu.toml  gateway.toml.example  production.toml.example  wechat.toml.example
config/profiles/: dev.toml  prod.toml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent.rs  context.rs  lib.rs  runner.rs  session.rs
crates/evolution/: Cargo.toml
crates/evolution/src/: engine.rs  insight.rs  lib.rs  scorer.rs  weight.rs
crates/hermess-agent/: Cargo.toml
crates/hermess-agent/src/: agent.rs  crypto.rs  curator.rs  distiller.rs  input_guard.rs  lib.rs  mimo.rs  subagent.rs
crates/hermess-finance/: Cargo.toml
crates/hermess-finance/src/: lib.rs  tool.rs
crates/hermess-finance/src/providers/: composite.rs  defaults.rs  eastmoney.rs  ftshare.rs  mod.rs  null.rs  retry.rs  sina.rs  tencent.rs  tushare.rs
crates/hermess-finance/src/types/: fund.rs  hkstock.rs  index.rs  macro.rs  mod.rs  stock.rs
crates/hermess-finance/tests/: integration.rs
crates/hermess-gateway/: Cargo.toml
crates/hermess-gateway/src/: classifier.rs  config.rs  decision.rs  decomposer.rs  discovery.rs  distiller.rs  feedback.rs  gateway.rs  lib.rs  main.rs  merger.rs  metrics.rs  models.rs  rate_limiter.rs  registry.rs  server.rs  shg.rs  skills.rs  strategy.rs
crates/hermess-gateway/tests/: integration.rs
crates/hermess-platform/: Cargo.toml
crates/hermess-platform/src/: lib.rs
crates/hermess-platform/src/adapters/: discord.rs  feishu.rs  mod.rs  slack.rs  telegram.rs  wechat.rs
crates/hermess-web/: Cargo.toml
crates/hermess-web/src/: lib.rs  main.rs  server.rs  session.rs
crates/hermess-web/src/feishu/: bot.rs  client.rs  event.rs  mod.rs  tools.rs
crates/hermess-web/src/wechat/: client.rs  crypto.rs  mod.rs  msg.rs
crates/llm/: Cargo.toml
crates/llm/src/: adapter.rs  anthropic.rs  lib.rs  openai.rs  retry.rs  stream.rs  usage.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: client.rs  lib.rs  protocol.rs  server.rs
crates/memory/: Cargo.toml
crates/memory/src/: dedup.rs  embedding.rs  lib.rs  preload.rs  vector.rs  working.rs
crates/planner/: Cargo.toml
crates/planner/src/: dependency.rs  lib.rs  plan.rs  planner.rs
crates/reflector/: Cargo.toml
crates/reflector/src/: attribution.rs  lib.rs  reflector.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: concurrency.rs  cron.rs  lib.rs  scheduler.rs  subagent.rs
crates/tools/: Cargo.toml
crates/tools/src/: caller.rs  code_exec.rs  lib.rs  mcp_tools.rs  plugin.rs  registry.rs  toolset.rs  vision.rs
crates/tools/src/browser/: mod.rs
crates/tools/src/builtin/: bash.rs  file.rs  guard.rs  mod.rs  reply.rs  web_search.rs
crates/tools/src/search/: mod.rs  serper.rs  tavily.rs
crates/tui/: Cargo.toml
crates/tui/src/: keybindings.rs  lib.rs  render.rs  run.rs  settings_store.rs  state.rs  theme.rs
crates/tui/src/panels/: context_ref.rs  evolution.rs  execution.rs  footer.rs  header.rs  help.rs  input.rs  kanban.rs  log.rs  mod.rs  overlay.rs  plan.rs  results.rs  settings.rs  slash_command.rs  tab_bar.rs
crates/tui/src/rich_text/: highlight.rs  latex.rs  mod.rs  table.rs
crates/tui/tests/: stress_100.rs
docs/: arch.md
docs/superpowers/plans/: 2026-05-21-hermes-agent.md  2026-05-22-tui-optimization-plan.md  2026-05-23-hermes-observability-optimization.md  2026-05-23-hermes-tui-optimization.md  2026-05-24-tui-declutter-plan.md  2026-05-26-hermess-gateway.md  2026-06-03-tui-enhancement.md  2026-06-06-feishu-integration.md  2026-06-06-feishu-wiki-docs-drive.md  2026-06-10-hermes-v1-release.md
docs/superpowers/specs/: 2026-05-21-hermes-agent-design.md  2026-05-22-tui-optimization-design.md  2026-05-23-hermes-observability-optimization-design.md  2026-05-23-hermes-tui-optimization-design.md  2026-05-24-tui-declutter-design.md  2026-05-26-hermess-gateway-design.md  2026-06-03-tui-enhancement-design.md  2026-06-06-feishu-config-modes-design.md  2026-06-06-feishu-integration-design.md  2026-06-06-feishu-wiki-docs-drive-design.md  2026-06-10-hermes-v1-release-design.md
plugins/ftshare-market-data/: plugin.toml  run.py
plugins/hello-world/: plugin.toml
src/: main.rs
tests/: agent_loop.rs
