[workspace]
members = [
    "crates/agent-core",
    "crates/hermess-agent",
    "crates/evolution",
    "crates/planner",
    "crates/memory",
    "crates/tools",
    "crates/reflector",
    "crates/llm",
    "crates/scheduler",
    "crates/tui",
    "crates/hermess-web",
    "crates/mcp",
    "crates/hermess-gateway",
]
resolver = "2"

[workspace.dependencies]
tokio          = { version = "1", features = ["full"] }
async-trait    = "0.1"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
toml           = "0.8"
reqwest        = { version = "0.12", features = ["json", "stream"] }
dashmap        = "6"
parking_lot    = "0.12"
arc-swap       = "1"
qdrant-client  = "1"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow         = "1"
thiserror      = "1"
clap           = { version = "4", features = ["derive"] }
uuid           = { version = "1", features = ["v4", "serde"] }
chrono         = { version = "0.4", features = ["serde"] }
futures        = "0.3"
bytes          = "1"
ratatui        = "0.29"
crossterm      = "0.28"

[package]
name = "hermes"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hermes"
path = "src/main.rs"

[dependencies]
agent-core = { path = "crates/agent-core" }
hermess-agent = { path = "crates/hermess-agent", features = ["tui"] }
evolution = { path = "crates/evolution" }
planner = { path = "crates/planner" }
memory = { path = "crates/memory" }
tools = { path = "crates/tools" }
reflector = { path = "crates/reflector" }
llm = { path = "crates/llm" }
scheduler = { path = "crates/scheduler" }
tui = { path = "crates/tui" }
mcp = { path = "crates/mcp" }
crossterm.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tower = "0.5"
