[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros", "signal"] }
