[package]
name = "agent-core"
version = "1.0.0"
description = "Core types and traits for the Hermes agent framework"
license = "MIT"
edition = "2021"
repository = "https://github.com/ZYX121212/hermes"
documentation = "https://github.com/ZYX121212/hermes#readme"
keywords = ["llm", "agent", "ai", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros", "signal"] }
