[package]
name = "evolution"
version = "0.1.0"
description = "Strategy weight learning engine with adaptive learning rate"
license = "MIT"
edition = "2021"
repository = "https://github.com/ZYX121212/hermes"
documentation = "https://github.com/ZYX121212/hermes#readme"
keywords = ["llm", "agent", "ai", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
agent-core = { path = "../agent-core" }
memory = { path = "../memory" }
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros"] }
