[package]
name = "hermess-agent"
version = "1.0.0"
description = "Default agent implementation with five-phase self-evolution loop"
license = "MIT"
edition = "2021"
repository = "https://github.com/ZYX121212/hermes"
documentation = "https://github.com/ZYX121212/hermes#readme"
keywords = ["llm", "agent", "ai", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
agent-core = { path = "../agent-core" }
planner = { path = "../planner" }
scheduler = { path = "../scheduler" }
reflector = { path = "../reflector" }
evolution = { path = "../evolution" }
memory = { path = "../memory" }
llm = { path = "../llm" }
tui = { path = "../tui", optional = true }
tools = { path = "../tools" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
regex = "1"
once_cell = "1"
aes-gcm = "0.10"
hex = "0.4"
base64 = "0.22"
rand = "0.8"
tokio = { workspace = true, features = ["sync", "time", "macros"] }

[features]
default = []
tui = ["dep:tui"]
