[package]
name = "hermess-finance"
version = "1.0.0"
description = "Pluggable financial data abstraction layer for Hermess — A-shares, HK stocks, indices, funds, macro"
license = "MIT"
edition = "2021"
repository = "https://github.com/ZYX121212/hermes"
documentation = "https://github.com/ZYX121212/hermes#readme"
keywords = ["llm", "agent", "ai", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tools = { path = "../tools" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
tracing.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros", "rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
