[package]
name = "hermess-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
llm = { path = "../llm" }
axum = "0.8"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
uuid = { workspace = true, features = ["v4"] }
chrono.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
