[package]
name = "hermess-gateway"
version = "0.1.0"
description = "Intelligent LLM routing gateway with complexity-based model selection"
license = "MIT"
edition = "2021"
repository = "https://github.com/ZYX121212/hermes"
documentation = "https://github.com/ZYX121212/hermes#readme"
keywords = ["llm", "agent", "ai", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
llm = { path = "../llm" }
axum = "0.8"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
serde_yaml = "0.9"
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
uuid = { workspace = true, features = ["v4"] }
chrono.workspace = true
parking_lot.workspace = true
hex = "0.4"
rand = "0.8"
reqwest.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "request-id"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
axum = "0.8"
