[package]
name = "hermess-platform"
version = "0.1.0"
description = "Unified multi-platform adapter layer for Hermes Agent"
license = "MIT"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros"] }
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true
uuid.workspace = true
reqwest.workspace = true
parking_lot.workspace = true
