[package]
name = "hermess-platform"
version = "0.1.0"
description = "Unified multi-platform adapter layer for Hermes Agent"
license = "MIT"
edition = "2021"
repository = "https://github.com/ZYX121212/hermes"
documentation = "https://github.com/ZYX121212/hermes#readme"
keywords = ["llm", "agent", "ai", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
agent-core = { path = "../agent-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros"] }
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true
uuid.workspace = true
reqwest.workspace = true
parking_lot.workspace = true
