[package]
name = "hermess-web"
version = "0.1.0"
description = "HTTP daemon with Feishu bot integration and general chat API"
license = "MIT"
edition = "2021"

[[bin]]
name = "hermess-webd"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
hermess-agent = { path = "../hermess-agent", features = ["tui"] }
planner = { path = "../planner" }
scheduler = { path = "../scheduler" }
reflector = { path = "../reflector" }
evolution = { path = "../evolution" }
memory = { path = "../memory" }
llm = { path = "../llm" }
tools = { path = "../tools" }
tui = { path = "../tui" }
hermess-finance = { path = "../hermess-finance" }

clap = { version = "4", features = ["derive"] }
axum = "0.8"
tokio = { workspace = true, features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "request-id"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
