[package]
name = "llm"
version = "0.1.0"
description = "LLM adapter layer supporting Anthropic, OpenAI, and DeepSeek providers"
license = "MIT"
edition = "2021"
repository = "https://github.com/ZYX121212/hermes"
documentation = "https://github.com/ZYX121212/hermes#readme"
keywords = ["llm", "agent", "ai", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
futures.workspace = true
bytes.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros"] }
