[package]
name = "mcp"
version = "0.1.0"
description = "Model Context Protocol stdio server for tool exposure"
license = "MIT"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["io-std", "sync", "macros"] }
