[package]
name = "memory"
version = "0.1.0"
description = "Dual-layer memory system with working memory and vector long-term storage"
license = "MIT"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
llm = { path = "../llm" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
parking_lot.workspace = true
qdrant-client.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros"] }
