[package]
name = "memory"
version = "0.1.0"
description = "Dual-layer memory system with working memory and vector long-term storage"
license = "MIT"
edition = "2021"
repository = "https://github.com/ZYX121212/hermes"
documentation = "https://github.com/ZYX121212/hermes#readme"
keywords = ["llm", "agent", "ai", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
agent-core = { path = "../agent-core" }
llm = { path = "../llm" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
parking_lot.workspace = true
qdrant-client.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros"] }
