[package]
name = "planner"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
llm = { path = "../llm" }
evolution = { path = "../evolution" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
futures.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
