[package]
name = "scheduler"
version = "0.1.0"
description = "DAG-based concurrent step executor with retry and fallback support"
license = "MIT"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
tools = { path = "../tools" }
async-trait.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros"] }
