[package]
name = "tools"
version = "0.1.0"
description = "Extensible tool framework with built-in bash, file, search, and plugin support"
license = "MIT"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
dashmap.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["process", "sync", "time", "macros"] }
reqwest.workspace = true
