[package]
name = "tools"
version = "1.0.0"
description = "Extensible tool framework with built-in bash, file, search, and plugin support"
license = "MIT"
edition = "2021"
repository = "https://github.com/ZYX121212/hermes"
documentation = "https://github.com/ZYX121212/hermes#readme"
keywords = ["llm", "agent", "ai", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
agent-core = { path = "../agent-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
dashmap.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["process", "sync", "time", "macros"] }
reqwest.workspace = true
base64 = "0.22"
html2text = "0.6"
headless_chrome = "1.0.21"
mcp = { path = "../mcp" }
futures.workspace = true
async-stream = "0.3"
