[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros"] }
parking_lot.workspace = true
agent-core = { path = "../agent-core" }
evolution = { path = "../evolution" }
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
memory = { path = "../memory" }
