[package]
name = "tui"
version = "1.0.0"
description = "Rataui-based terminal UI with 12 panels and real-time event display"
license = "MIT"
edition = "2021"
repository = "https://github.com/ZYX121212/hermes"
documentation = "https://github.com/ZYX121212/hermes#readme"
keywords = ["llm", "agent", "ai", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros"] }
parking_lot.workspace = true
agent-core = { path = "../agent-core" }
evolution = { path = "../evolution" }
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
llm = { path = "../llm" }
syntect = { version = "5", default-features = false, features = ["parsing", "regex-onig", "default-syntaxes", "default-themes"] }
toml = "0.8"

[dev-dependencies]
memory = { path = "../memory" }
